// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package domains.v1;

import "common/v1/common.proto";

option go_package = "github.com/absmach/supermq/internal/grpc/domains/v1";


// DomainsService is a service that provides access to
// domains functionalities for SuperMQ services.
service DomainsService {
  rpc DeleteUserFromDomains(DeleteUserReq)
    returns (DeleteUserRes) {}
  rpc RetrieveEntity(common.v1.RetrieveEntityReq) 
    returns (common.v1.RetrieveEntityRes) {}
  rpc RetrieveByRoute(common.v1.RetrieveByRouteReq)
    returns (common.v1.RetrieveEntityRes) {}
}

message DeleteUserRes {
  bool deleted = 1;
}

message DeleteUserReq{
  string id          = 1;
}
